Created Service Layer

--- a/LambdaForum/LambdaForum.csproj
+++ b/LambdaForum/LambdaForum.csproj
@@ -19,4 +19,9 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\LambdaForum.Data\LambdaForum.Data.csproj" />
+  </ItemGroup>
+
 </Project>
