--- a/LambdaForum.Service/LambdaForum.Service.csproj
+++ b/LambdaForum.Service/LambdaForum.Service.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LambdaForum.Data\LambdaForum.Data.csproj" />
+  </ItemGroup>
+
 </Project>
