--- a/LambdaForum/LambdaForum.csproj
+++ b/LambdaForum/LambdaForum.csproj
@@ -18,7 +18,9 @@
 
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\images\forum\" />
+    <Folder Include="wwwroot\images\users\" />
+    <Folder Include="wwwroot\images\theme\" />
   </ItemGroup>
 
 
